name:                hooks-dir
version:             0.1.0.0
synopsis:            run all executables in a directory with the same 
                     arguments and environment and collect the results.
-- description: 
homepage:            https://github.com/ibotty/hooks-dir
license:             BSD3
license-file:        LICENSE
author:              Tobias Florek
maintainer:          me@ibotty.net
copyright:           2013, 2014 Tobias Florek
category:            System
build-type:          Simple
extra-source-files:  Changelog.md
cabal-version:       >=1.10

library
  exposed-modules:     System.Process.Hooks
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4 && <5
                     , directory >=1.1 && <1.3
                     , process >=1.1 && <1.3
                     , text >=0.11 && <1.2
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
